include readme, license

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -77,7 +77,7 @@
      "text": [
       "/Users/imcconnell/PycharmProjects/pyhrrrzarr/.pixi/envs/default/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Fetching HRRR data:   7%|▋         | 35500/517440 [14:05<3:11:51, 41.87it/s]"
+      "Fetching HRRR data:   9%|▊         | 44000/517440 [17:27<3:06:27, 42.32it/s]"
      ]
     }
    ],
