collect and process precip values

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,8 +34,9 @@
     "from pathlib import Path\n",
     "from datetime import datetime\n",
     "\n",
-    "from pyhrrrzarr.hrrr.schema import HRRRVariable, VariableName, Level\n",
-    "from pyhrrrzarr.hrrrzarr.requests import create_requests, csv_to_locations\n",
+    "from pyhrrrzarr.schema import csv_to_locations\n",
+    "from pyhrrrzarr.hrrr.schema import HRRRVariable, VariableName, Level \n",
+    "from pyhrrrzarr.hrrrzarr.requests import create_requests\n",
     "\n",
     "\n",
     "csv_path = Path(\"../data/WiscoNet pre-2024 stations.csv\").resolve()\n",
@@ -43,13 +44,11 @@
     "vars = [\n",
     "    HRRRVariable(name=VariableName.TMP, level=Level._2M_ABOVE_GROUND),\n",
     "    HRRRVariable(name=VariableName.DPT, level=Level._2M_ABOVE_GROUND),\n",
-    "    # HRRRVariable(name=VariableName.PRATE, level=Level._SURFACE),\n",
+    "    HRRRVariable(name=VariableName.APCP_1hr_acc_fcst, level=Level._SURFACE, model_type=\"fcst\"),\n",
     "    HRRRVariable(name=VariableName.RH, level=Level._2M_ABOVE_GROUND),\n",
     "    HRRRVariable(name=VariableName.UGRD, level=Level._10M_ABOVE_GROUND),\n",
     "    HRRRVariable(name=VariableName.VGRD, level=Level._10M_ABOVE_GROUND),\n",
     "]\n",
-    "level_type = \"sfc\"\n",
-    "model_type = \"anl\"\n",
     "start=datetime(2024, 1, 1, 0, 0)\n",
     "# end=datetime(2024, 1, 2, 0, 0)\n",
     "end=datetime.now()\n",
@@ -57,8 +56,6 @@
     "requests = create_requests(\n",
     "    locations=locations,\n",
     "    variables=vars,\n",
-    "    level_type=level_type,\n",
-    "    model_type=model_type,\n",
     "    start=start,\n",
     "    end=end\n",
     ")\n",
@@ -77,7 +74,7 @@
      "text": [
       "/Users/imcconnell/PycharmProjects/pyhrrrzarr/.pixi/envs/default/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Fetching HRRR data:   9%|▊         | 44000/517440 [17:27<3:06:27, 42.32it/s]"
+      "Fetching HRRR data:  42%|████▏     | 217500/517440 [1:28:45<2:00:36, 41.45it/s]"
      ]
     }
    ],
@@ -205,136 +202,13 @@
     }
    ],
    "source": [
-    "from pyhrrrzarr.hrrrzarr.requests import requests_to_df\n",
+    "from pyhrrrzarr.hrrrzarr.postprocess import (\n",
+    "    requests_to_df, add_wind_speed_and_direction\n",
+    ")\n",
     "\n",
     "df = requests_to_df(requests)\n",
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>location</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>run_hour</th>\n",
-       "      <th>var_name</th>\n",
-       "      <th>var_level</th>\n",
-       "      <th>value</th>\n",
-       "      <th>units</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2683</th>\n",
-       "      <td>OJNR</td>\n",
-       "      <td>43.025</td>\n",
-       "      <td>-89.54</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
-       "      <td>WIND_DIR</td>\n",
-       "      <td>10m_above_ground</td>\n",
-       "      <td>236.218599</td>\n",
-       "      <td>degrees</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2684</th>\n",
-       "      <td>RNLD</td>\n",
-       "      <td>45.655</td>\n",
-       "      <td>-89.27</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
-       "      <td>WIND_DIR</td>\n",
-       "      <td>10m_above_ground</td>\n",
-       "      <td>236.873897</td>\n",
-       "      <td>degrees</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2685</th>\n",
-       "      <td>SODO</td>\n",
-       "      <td>44.779</td>\n",
-       "      <td>-87.36</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
-       "      <td>WIND_DIR</td>\n",
-       "      <td>10m_above_ground</td>\n",
-       "      <td>243.113293</td>\n",
-       "      <td>degrees</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2686</th>\n",
-       "      <td>SPNR</td>\n",
-       "      <td>45.827</td>\n",
-       "      <td>-91.86</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
-       "      <td>WIND_DIR</td>\n",
-       "      <td>10m_above_ground</td>\n",
-       "      <td>207.520608</td>\n",
-       "      <td>degrees</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2687</th>\n",
-       "      <td>WCRS</td>\n",
-       "      <td>44.185</td>\n",
-       "      <td>-90.74</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
-       "      <td>WIND_DIR</td>\n",
-       "      <td>10m_above_ground</td>\n",
-       "      <td>228.188670</td>\n",
-       "      <td>degrees</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     location     lat    lon            run_hour  var_name         var_level  \\\n",
-       "2683     OJNR  43.025 -89.54 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2684     RNLD  45.655 -89.27 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2685     SODO  44.779 -87.36 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2686     SPNR  45.827 -91.86 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2687     WCRS  44.185 -90.74 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "\n",
-       "           value    units  \n",
-       "2683  236.218599  degrees  \n",
-       "2684  236.873897  degrees  \n",
-       "2685  243.113293  degrees  \n",
-       "2686  207.520608  degrees  \n",
-       "2687  228.188670  degrees  "
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from pyhrrrzarr.hrrrzarr.requests import add_wind_speed_and_direction\n",
-    "\n",
     "df = add_wind_speed_and_direction(df)\n",
-    "df.tail()\n",
-    "    \n",
-    "\n"
+    "df.tail()"
    ]
   },
   {
@@ -823,7 +697,7 @@
     "\n",
     "fs = s3fs.S3FileSystem(anon=True)\n",
     "# url = \"hrrrzarr/sfc/20240101/20240101_00z_anl.zarr/surface/PRATE/surface/PRATE\"\n",
-    "url = \"hrrrzarr/sfc/20200903/20200903_00z_fcst.zarr/2m_above_ground/TMP\"\n",
+    "url = \"hrrrzarr/sfc/20200903/20200903_00z_fcst.zarr/2m_above_ground/APCP_1hr_acc_fcst\"\n",
     "store = s3fs.S3Map(root=url, s3=fs, check=False)\n",
     "ds = xr.open_zarr(store)\n",
     "ds"
