decompress with multiprocessing

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -8,8 +8,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from datetime import datetime\n",
+    "\n",
+    "from pyhrrrzarr.schema import csv_to_locations\n",
+    "from pyhrrrzarr.hrrr.schema import HRRRVariable, VariableName, Level \n",
+    "from pyhrrrzarr.hrrrzarr.requests import create_requests\n",
+    "from pyhrrrzarr.hrrrzarr.fetch import get_all_request_values\n",
+    "from pyhrrrzarr.hrrrzarr.postprocess import (\n",
+    "    requests_to_df, add_wind_speed_and_direction\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## create all requests for data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,14 +53,6 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "from datetime import datetime\n",
-    "\n",
-    "from pyhrrrzarr.schema import csv_to_locations\n",
-    "from pyhrrrzarr.hrrr.schema import HRRRVariable, VariableName, Level \n",
-    "from pyhrrrzarr.hrrrzarr.requests import create_requests\n",
-    "\n",
-    "\n",
     "csv_path = Path(\"../data/WiscoNet pre-2024 stations.csv\").resolve()\n",
     "locations = csv_to_locations(csv_path)\n",
     "vars = [\n",
@@ -41,7 +65,7 @@
     "]\n",
     "start=datetime(2024, 1, 1, 0, 0)\n",
     "end=datetime(2024, 1, 2, 0, 0)\n",
-    "end=datetime.now()\n",
+    "# end=datetime.now()\n",
     "requests = create_requests(\n",
     "    locations=locations,\n",
     "    variables=vars,\n",
@@ -52,14 +76,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# pull data from s3 and/or local cache"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cdd74b4914a424e9b7e3f695a35a578",
+       "model_id": "e1da712650ea4903a06cdace55da2114",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,19 +100,46 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34226fa89b7947f58aa82eac54b86cf2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "decompressing:   0%|          | 0/2016 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from pyhrrrzarr.hrrrzarr.fetch import get_all_request_values\n",
-    "\n",
-    "await get_all_request_values(requests)\n"
+    "# around 4 hours for 620928 requests from s3, same number of requests in around 20 minutes from local cache\n",
+    "requests = await get_all_request_values(requests, batch_size=5500)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# post process data to dataframe, calculate wind speed and direction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "got 2016 original rows\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -189,29 +247,33 @@
        "2687  228.188670  degrees  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pyhrrrzarr.hrrrzarr.postprocess import (\n",
-    "    requests_to_df, add_wind_speed_and_direction\n",
-    ")\n",
-    "\n",
     "df = requests_to_df([r for r in requests if r.value is not None])\n",
+    "print(f\"got {len(df)} original rows\")\n",
     "df = add_wind_speed_and_direction(df)\n",
     "df.tail()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# persist postprocessed data to disk"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_parquet(\"wisco.parquet\")\n",
-    "df.to_csv(\"wisco.csv\")"
+    "df.to_parquet(\"wisconet_HRRR.parquet\")\n",
+    "df.to_csv(\"wisconet_HRRR.csv\")"
    ]
   }
  ],
