log processing stats to INFO

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
     "from pathlib import Path\n",
     "from datetime import datetime\n",
     "\n",
@@ -27,9 +28,12 @@
     "from pyhrrrzarr.hrrr.schema import HRRRVariable, VariableName, Level \n",
     "from pyhrrrzarr.hrrrzarr.requests import create_requests\n",
     "from pyhrrrzarr.hrrrzarr.fetch import get_all_request_values\n",
-    "from pyhrrrzarr.hrrrzarr.postprocess import (\n",
-    "    requests_to_df, add_wind_speed_and_direction\n",
-    ")\n"
+    "from pyhrrrzarr.hrrrzarr.postprocess import requests_to_df, add_wind_speed_and_direction\n",
+    "\n",
+    "\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "logging.basicConfig(level=logging.INFO)"
    ]
   },
   {
@@ -45,10 +49,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "created 2016 requests\n"
+      "INFO:root:Created 624960 requests\n"
      ]
     }
    ],
@@ -64,15 +68,14 @@
     "    HRRRVariable(name=VariableName.VGRD, level=Level._10M_ABOVE_GROUND),\n",
     "]\n",
     "start=datetime(2024, 1, 1, 0, 0)\n",
-    "end=datetime(2024, 1, 2, 0, 0)\n",
-    "# end=datetime.now()\n",
+    "# end=datetime(2024, 9, 2, 0, 0)\n",
+    "end=datetime.now()\n",
     "requests = create_requests(\n",
     "    locations=locations,\n",
     "    variables=vars,\n",
     "    start=start,\n",
     "    end=end\n",
-    ")\n",
-    "print(f\"created {len(requests)} requests\")"
+    ")"
    ]
   },
   {
@@ -84,32 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1da712650ea4903a06cdace55da2114",
+       "model_id": "4e1cbfad6fbf4c8ca7a9edc95576631b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Fetching HRRR data:   0%|          | 0/2016 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34226fa89b7947f58aa82eac54b86cf2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "decompressing:   0%|          | 0/2016 [00:00<?, ?it/s]"
+       "Fetching HRRR data:   0%|          | 0/624960 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -130,14 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "got 2016 original rows\n"
+      "INFO:pyhrrrzarr.hrrrzarr.postprocess:Converted 2016 requests to DataFrame rows\n",
+      "INFO:pyhrrrzarr.hrrrzarr.postprocess:Added 336 wind speed and 336 wind direction rows\n"
      ]
     },
     {
@@ -177,10 +167,10 @@
        "      <td>OJNR</td>\n",
        "      <td>43.025</td>\n",
        "      <td>-89.54</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
+       "      <td>2024-09-01 23:00:00</td>\n",
        "      <td>WIND_DIR</td>\n",
        "      <td>10m_above_ground</td>\n",
-       "      <td>236.218599</td>\n",
+       "      <td>358.158735</td>\n",
        "      <td>degrees</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -188,10 +178,10 @@
        "      <td>RNLD</td>\n",
        "      <td>45.655</td>\n",
        "      <td>-89.27</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
+       "      <td>2024-09-01 23:00:00</td>\n",
        "      <td>WIND_DIR</td>\n",
        "      <td>10m_above_ground</td>\n",
-       "      <td>236.873897</td>\n",
+       "      <td>322.530417</td>\n",
        "      <td>degrees</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -199,10 +189,10 @@
        "      <td>SODO</td>\n",
        "      <td>44.779</td>\n",
        "      <td>-87.36</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
+       "      <td>2024-09-01 23:00:00</td>\n",
        "      <td>WIND_DIR</td>\n",
        "      <td>10m_above_ground</td>\n",
-       "      <td>243.113293</td>\n",
+       "      <td>348.278333</td>\n",
        "      <td>degrees</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -210,10 +200,10 @@
        "      <td>SPNR</td>\n",
        "      <td>45.827</td>\n",
        "      <td>-91.86</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
+       "      <td>2024-09-01 23:00:00</td>\n",
        "      <td>WIND_DIR</td>\n",
        "      <td>10m_above_ground</td>\n",
-       "      <td>207.520608</td>\n",
+       "      <td>311.739762</td>\n",
        "      <td>degrees</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -221,10 +211,10 @@
        "      <td>WCRS</td>\n",
        "      <td>44.185</td>\n",
        "      <td>-90.74</td>\n",
-       "      <td>2024-01-01 23:00:00</td>\n",
+       "      <td>2024-09-01 23:00:00</td>\n",
        "      <td>WIND_DIR</td>\n",
        "      <td>10m_above_ground</td>\n",
-       "      <td>228.188670</td>\n",
+       "      <td>339.326424</td>\n",
        "      <td>degrees</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -233,18 +223,18 @@
       ],
       "text/plain": [
        "     location     lat    lon            run_hour  var_name         var_level  \\\n",
-       "2683     OJNR  43.025 -89.54 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2684     RNLD  45.655 -89.27 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2685     SODO  44.779 -87.36 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2686     SPNR  45.827 -91.86 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
-       "2687     WCRS  44.185 -90.74 2024-01-01 23:00:00  WIND_DIR  10m_above_ground   \n",
+       "2683     OJNR  43.025 -89.54 2024-09-01 23:00:00  WIND_DIR  10m_above_ground   \n",
+       "2684     RNLD  45.655 -89.27 2024-09-01 23:00:00  WIND_DIR  10m_above_ground   \n",
+       "2685     SODO  44.779 -87.36 2024-09-01 23:00:00  WIND_DIR  10m_above_ground   \n",
+       "2686     SPNR  45.827 -91.86 2024-09-01 23:00:00  WIND_DIR  10m_above_ground   \n",
+       "2687     WCRS  44.185 -90.74 2024-09-01 23:00:00  WIND_DIR  10m_above_ground   \n",
        "\n",
        "           value    units  \n",
-       "2683  236.218599  degrees  \n",
-       "2684  236.873897  degrees  \n",
-       "2685  243.113293  degrees  \n",
-       "2686  207.520608  degrees  \n",
-       "2687  228.188670  degrees  "
+       "2683  358.158735  degrees  \n",
+       "2684  322.530417  degrees  \n",
+       "2685  348.278333  degrees  \n",
+       "2686  311.739762  degrees  \n",
+       "2687  339.326424  degrees  "
       ]
      },
      "execution_count": 4,
@@ -254,7 +244,6 @@
    ],
    "source": [
     "df = requests_to_df([r for r in requests if r.value is not None])\n",
-    "print(f\"got {len(df)} original rows\")\n",
     "df = add_wind_speed_and_direction(df)\n",
     "df.tail()"
    ]
@@ -268,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
